public/css/style.css
h1 {

}
body {
}

.todo-items__wrapper {
    position: absolute;
    width: 100%;
    height: 100%;
    overflow: scroll;
}
.todo-items__wrapper::-webkit-scrollbar {
    display: none;
}
.todo-items__header {
    position: fixed;
    top: 10px;
    left: 50%;
    transform: translateX(-50%);
    background: #fff;
    padding: 20px;
    z-index: 1;
    box-shadow: 0 0 4px 4px rgba(0, 0, 0, .3);
    margin: 0;
}
.todo-items {
    width: 10000px;
    height: 5000px;
    background: url("../images/corkboard.jpg");
}
.todo-item {
    position: absolute;
    width: 200px;
    height: 340px;
    box-shadow: 0 0 3px 3px rgba(0, 0, 0, .2);
    font-family: 'Indie Flower', cursive;
    box-sizing: border-box;
    border-bottom-right-radius: 60px 5px;
}
.todo-item--done {
  text-decoration: line-through;
}
.todo-item__inner:after, .todo-item__edit:after {
  content: "";
  position:absolute;
  z-index:-1;
  right: 0;
  bottom:17px;
  width:200px;
  height: 25px;
  background: rgba(0, 0, 0, 0.2);
  box-shadow:2px 15px 5px rgba(0, 0, 0, 0.40);
  transform: matrix(-1, -0.1, 0, 1, 0, 0);
}
.todo-item__inner, .todo-item__edit {
  position: relative;
  padding: 30px 10px 10px;
  background: linear-gradient(135deg, #b1ff87 81%,#b1ff87 82%,#dbffc7 100%);
  box-sizing: border-box;
}
.todo-item--medium .todo-item__inner, .todo-item--medium .todo-item__edit {
  background: linear-gradient(135deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%);
}
.todo-item--high .todo-item__inner, .todo-item--high .todo-item__edit {
  background: linear-gradient(135deg, #ff879b 81%,#ff879b 82%,#ffc7d0 100%);
}
.todo-item.deleted:not(.deleted--right) {
    animation: deleted 600ms ease-in;
    transform-origin: top center;
}
.todo-item.deleted--right {
  animation: deleted-right 600ms ease-in;
  transform-origin: top center;
}
.todo-item.deleted .todo-item__delete {
  top: -55px;
  opacity: 0;
}
@keyframes deleted {
  0% {
    transform: none;
    opacity: 1;
  }
  33% {
    transform: rotate(2deg) translateY(120px);
    opacity: 1;
  }
  66% {
    transform: rotate(6deg) translateY(250px);
    opacity: 1;
  }
  100% {
    transform: rotate(9deg) translateY(400px);
    opacity: 0;
  }
}
@keyframes deleted-right {
  0% {
    transform: none;
    opacity: 1;
  }
  33% {
    transform: rotate(-2deg) translateY(120px);
    opacity: 1;
  }
  66% {
    transform: rotate(-6deg) translateY(250px);
    opacity: 1;
  }
  100% {
    transform: rotate(-9deg) translateY(400px);
    opacity: 0;
  }
}
.todo-item__delete {
  width: 31px;
  height: 45px;
  background: url("../images/pin.png") no-repeat 0 0;
  position: absolute;
  top: -30px;
  left: 50%;
  margin-left: -15px;
  transition: all 200ms;
  z-index: 1;
  animation: pin 200ms ease-in;
}
.todo-item.ready .todo-item__delete {
  animation: none;
}
@keyframes pin {
  0% {
   opacity: 0;
    top: -40px;
  }
  50% {
    height: 50px;
    top: -40px;
    opacity: 1;
  }
  100% {
    height: 48px;
    top: -30px;
  }
}
.todo-item__delete:after {
  content: "";
  width: 31px;
  height: 48px;
  background: url("../images/pin-dent.png") no-repeat 0 0;
  position: absolute;
  bottom: -3px;
  left: 50%;
  margin-left: -15px;
  z-index: -1;
}
.todo-item__delete:hover {
  height: 50px;
  top: -35px;
}
.todo-item__inner {
    height: 100%;
}
.todo-item__description {
  height: 100%;
  overflow-y: scroll;
}
.todo-item__done {
  position: absolute;
  bottom: 10px;
  right: 10px;
  opacity: 0;
  transition: opacity .3s;
}
.todo-item__done:before {
  content: 'Mark complete';
}
.todo-item__done:after {
  content: '\2714';
  margin-left: 5px;
}
.todo-item--done .todo-item__done:before {
  content: 'Mark incomplete';
}
.todo-item--done .todo-item__done:after {
  content: '\2718';
}
.todo-item:hover .todo-item__done {
  opacity: 1;
}
.todo-item__description::-webkit-scrollbar {
  display: none;
}
.todo-item__edit {
    height: 100%;
}
.todo-item textarea {
    background: none;
    border: 0;
    padding: 0;
    resize: none;
    outline: none;
    width: 100%;
    height: calc(100% - 35px);
}
.todo-item .button {
  background: rgba(255, 255, 255, .5);
  position: absolute;
  bottom: 10px;
  left: 10px;
  padding: 5px;
  cursor: pointer;
}
.todo-items__wrapper textarea::-webkit-scrollbar {
    display: none;
}
.todo-item__priority {
  position: absolute;
  top: 0;
  right: -50px;
}
.todo-item__priority > div {
  width: 40px;
  height: 40px;
  background: #b1ff87;
  text-align: center;
  line-height: 40px;
  cursor: pointer;
}
.todo-item__priority > div.todo-item__priority-high {
  background: #ff879b;
}
.todo-item__priority > div.todo-item__priority-med {
  background: #ffff88;
}

.login__toggle {
  display: none;
}
.login__toggle + label {
  position: fixed;
  top: 0;
  right: 0;
  background: #fff;
  padding: 5px;
  transition: right 300ms ease-in-out;
  box-shadow: 0 0 4px 4px rgba(0, 0, 0, .3);
}
.login__toggle:checked + label {
  right: 300px;
}
.login__sidebar {
  position: fixed;
  width: 300px;
  top: 0;
  right: -300px;
  bottom: 0;
  transition: right 300ms ease-in-out;
  background: #fff;
  box-shadow: 0 0 4px 4px rgba(0, 0, 0, .3);
  padding: 10px 20px;
  box-sizing: border-box;
}
.login__sidebar h2:not(:first-child) {
  margin-top: 50px;
}
.login__toggle:checked ~ .login__sidebar {
  right: 0;
}
.login__sidebar label {
  display: block;
  width: 100%;
  margin: 5px 0;
}
.login__sidebar input {
  width: 100%;
  border: 1px solid #999;
  padding: 5px 10px;
  box-sizing: border-box;
  background: #fff;
}
.error {
  color: red;
}
.success {
  color: green;
}
.login__sidebar .button {
  background: #333;
  color: #fff;
  padding: 5px;
  margin: 10px 0;
}
.login__logout {
  position: fixed;
  top: 0;
  right: 0;
  background: #fff;
  padding: 5px;
  box-shadow: 0 0 4px 4px rgba(0, 0, 0, .3);
}
.reset {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, .5);
}
.reset__modal {
  position: fixed;
  top: 50%;
  left: 50%;
  width: 300px;
  height: 130px;
  padding: 15px;
  background: #fff;
  margin: -65px 0 0 -150px;
  z-index: 10000;
  box-sizing: border-box;
  box-shadow: 0 0 4px 4px rgba(0, 0, 0, .3);
}
.reset__modal label {
  display: block;
  margin-bottom: 10px;
}
.reset__modal input[type=password] {
  width: 100%;
  border: 1px solid #999;
  padding: 5px 10px;
  box-sizing: border-box;
  background: #fff;
}
.reset__modal .button {
  display: block;
  background: #333;
  color: #fff;
  padding: 5px;
  margin-top: 10px;
}
.reset__modal .success {
  margin-top: 15px;
}

